syntax = "proto3";

package encoded_len;

message Numerics {
    int32 int32 = 1;
    int64 int64 = 2;
    uint32 uint32 = 3;
    uint64 uint64 = 4;
    sint32 sint32 = 5;
    sint64 sint64 = 6;
    fixed32 fixed32 = 7;
    fixed64 fixed64 = 8;
    sfixed32 sfixed32 = 9;
    sfixed64 sfixed64 = 10;
    float float = 11;
    double double = 12;
    bool bool = 13;
    BadEnum enumeration = 14;
}

enum BadEnum {
    UNKNOWN = 0;
    LONG = -1;
}
